<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:background="@mipmap/bg_my"
                android:gravity="center_horizontal">
                
                <dev.mirror.library.android.view.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_default_header"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_data"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_data"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/d8"
                    android:textSize="16sp"/>

            </LinearLayout>


            <TextView
                android:text="@string/yuchang_info"
                style="@style/TvAbout"/>

            <TextView
                android:text="@string/my_info"
                style="@style/TvAbout"/>

            <TextView
                android:text="@string/feed_back"
                style="@style/TvAbout"/>

            <TextView
                android:text="@string/version_check"
                style="@style/TvAbout"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>